ticket and feed

--- a/Statics/create-ticket.html
+++ b/Statics/create-ticket.html
@@ -37,9 +37,9 @@
         <![endif]-->
     </head>
 
-  <section class="content">
+  <section class="content" id = "target">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="box box-warning">
                 <div class="box-header with-border">
                   <h3 class="box-title">Creating a ticket</h3>
