--- a/Statics/agent-workspace.html
+++ b/Statics/agent-workspace.html
@@ -187,80 +187,128 @@
           <li class="active">Dashboard</li>
         </ol>
       </section>
+      <div class="alert alert-success alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <h4>  <i class="icon fa fa-check"></i> Alert!</h4> Ticket z was closed. You can now claim a new ticket.
+      </div>
+      <div class="alert alert-warning alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <h4><i class="icon fa fa-warning"></i> Alert!</h4> Ticket x was closed by agent y.
+      </div>
+      <!-- Main content -->
       <div class="row">
-        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-m-offset-1 col-sm-10 col-sm-offset-10">
+        <div class="col-lg-4  col-md-4  col-sm-4 ">
           <!-- TWEET WRAPPER START -->
           <div class="box box-success">
-                <div class="box-header">
-                  <i class="fa fa-comments-o"></i>
-                  <h3 class="box-title">Chat</h3>
-                  <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
-                    <div class="btn-group" data-toggle="btn-toggle" >
-                      <button type="button" class="btn btn-default btn-sm active"><i class="fa fa-square text-green"></i></button>
-                      <button type="button" class="btn btn-default btn-sm"><i class="fa fa-square text-red"></i></button>
-                    </div>
-                  </div>
+            <div class="box-header">
+              <i class="fa fa-comments-o"></i>
+              <h3 class="box-title">Client name</h3>
+              <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
+                <div class="btn-group" data-toggle="btn-toggle">
+                  <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                  <button class="btn btn-success btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>
                 </div>
-                <div class="box-body chat" id="chat-box">
-                  <!-- chat item -->
-                  <div class="item">
-                    <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
-                        Mike Doe
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                    
-                  </div><!-- /.item -->
-                  <!-- chat item -->
-                  <div class="item">
-                    <img src="../Template/dist/img/user3-128x128.jpg" alt="user image" class="offline">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
-                        Alexander Pierce
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                  </div><!-- /.item -->
-                  <!-- chat item -->
-                <div class="item">
-                    <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:25</small>
-                        Mike Doe
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                    <div class="attachment">
-                      <h4>Attachments:</h4>
-                      <p class="filename">
-                        Theme-thumbnail-image.jpg
-                      </p>
-                      <div class="pull-right">
-                        <button class="btn btn-primary btn-sm btn-flat">Open</button>
-                      </div>
-                    </div><!-- /.attachment -->
-                  </div><!-- /.item -->
-                </div><!-- /.chat -->
-                <div class="box-footer">
-                  <div class="input-group">
-                    <input class="form-control" placeholder="Type message...">
-                    <div class="input-group-btn">
-                      <button class="btn btn-success"><i class="fa fa-plus"></i></button>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <div class="box-body chat" id="chat-box-workspace" style="height: auto;">
+              <!-- chat item -->
+              <div class="item">
+                <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
+                <p class="message">
+                  <a href="#" class="name">
+                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small> Mike Doe
+                  </a>
+                  I would like to meet you to discuss the latest news about the arrival of the new theme. They say it is going to be one the best themes on the market
+                </p>
+              </div>
+            </div>
+            <!-- /.chat -->
+            <div class="box-footer">
+              <div class="input-group">
+                <input class="form-control" placeholder="Type message...">
+                <div class="input-group-btn">
+                  <button class="btn btn-success"><i class="fa fa-plus"></i></button>
                 </div>
-              </div><!-- /.box (chat box) -->
+              </div>
+            </div>
+          </div>
+          <!-- /.box (chat box) -->
+          <!-- TWEET WRAPPER END -->
+        </div>
+        <div class="col-lg-4  col-md-4 col-sm-4 ">
+          <!-- TWEET WRAPPER START -->
+          <div class="box box-success">
+            <div class="box-header">
+              <i class="fa fa-comments-o"></i>
+              <h3 class="box-title">Client name</h3>
+              <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
+                <div class="btn-group" data-toggle="btn-toggle">
+                  <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                  <button class="btn btn-success btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>
+                </div>
+              </div>
+            </div>
+            <div class="box-body chat" id="chat-box-workspace" style="height: auto;">
+              <!-- chat item -->
+              <div class="item">
+                <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
+                <p class="message">
+                  <a href="#" class="name">
+                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small> Mike Doe
+                  </a>
+                  I would like to meet you to discuss the latest news about the arrival of the new theme. They say it is going to be one the best themes on the market
+                </p>
+              </div>
+            </div>
+            <!-- /.chat -->
+            <div class="box-footer">
+              <div class="input-group">
+                <input class="form-control" placeholder="Type message...">
+                <div class="input-group-btn">
+                  <button class="btn btn-success"><i class="fa fa-plus"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.box (chat box) -->
+          <!-- TWEET WRAPPER END -->
+        </div>
+        <div class="col-lg-4  col-md-4  col-sm-4 ">
+          <!-- TWEET WRAPPER START -->
+          <div class="box box-success">
+            <div class="box-header">
+              <i class="fa fa-comments-o"></i>
+              <h3 class="box-title">Client name</h3>
+              <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
+                <div class="btn-group" data-toggle="btn-toggle">
+                  <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                  <button class="btn btn-success btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>
+                </div>
+              </div>
+            </div>
+            <div class="box-body chat" id="chat-box-workspace" style="height: auto;">
+              <!-- chat item -->
+              <div class="item">
+                <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
+                <p class="message">
+                  <a href="#" class="name">
+                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small> Mike Doe
+                  </a>
+                  I would like to meet you to discuss the latest news about the arrival of the new theme. They say it is going to be one the best themes on the market
+                </p>
+              </div>
+            </div>
+            <!-- /.chat -->
+            <div class="box-footer">
+              <div class="input-group">
+                <input class="form-control" placeholder="Type message...">
+                <div class="input-group-btn">
+                  <button class="btn btn-success"><i class="fa fa-plus"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.box (chat box) -->
           <!-- TWEET WRAPPER END -->
         </div>
       </div>
