added layout to profile and adjusted links

--- a/Statics/agent-workspace.html
+++ b/Statics/agent-workspace.html
@@ -158,8 +158,8 @@
         <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
           <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-          <li class="active"><a href="#"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
-          <li><a href="statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
+          <li class="active"><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
+          <li><a href="../Assuty/statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
           <li class="treeview">
             <a href="#">
               <i class="fa fa-ellipsis-h"></i> <span>Settings</span>
