--- a/Assuty/layout.html
+++ b/Assuty/layout.html
@@ -191,7 +191,7 @@
         <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
           <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-          <li class="active"><a href="#"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
+          <li class="active"><a href="../Statics/feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
           <li><a href="statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
           <li class="treeview">
             <a href="#">
