--- a/Assuty/statistics.html
+++ b/Assuty/statistics.html
@@ -225,8 +225,9 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
-            <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-            <li><a href="layout.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
+            <li><a href="../Statics/agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
+            <li><a href="../Statics/profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
+            <li><a href="../Statics/feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
             <li class="active"><a href="#"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
             <li class="treeview">
               <a href="#">
