--- a/Statics/ticket.html
+++ b/Statics/ticket.html
@@ -157,8 +157,9 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
+          <li><a href="agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
           <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-          <li class="active"><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
+          <li ><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
           <li><a href="../Assuty/statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
           <li class="treeview">
             <a href="#">
