--- a/Statics/agent-workspace.html
+++ b/Statics/agent-workspace.html
@@ -185,7 +185,7 @@
       <section class="content-header">
         <ol class="breadcrumb">
           <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Dashboard</li>
+          <li class="active">Workspace</li>
         </ol>
       </section>
       <div class="alert alert-success alert-dismissable">
