--- a/Statics/feed.html
+++ b/Statics/feed.html
@@ -157,6 +157,7 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
+          <li ><a href="agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
           <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
           <li class="active"><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
           <li><a href="../Assuty/statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
@@ -184,7 +185,7 @@
       <section class="content-header">
         <ol class="breadcrumb">
           <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Dashboard</li>
+          <li class="active">Feed</li>
         </ol>
       </section>
       <div class="row">
