links for tickets

--- a/Statics/agent-workspace.html
+++ b/Statics/agent-workspace.html
@@ -203,7 +203,7 @@
           <div class="box box-success">
             <div class="box-header">
               <i class="fa fa-comments-o"></i>
-              <h3 class="box-title">Client name</h3>
+              <a href="ticket.html"><h3 class="box-title">Client name</h3></a>
               <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
                 <div class="btn-group" data-toggle="btn-toggle">
                   <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -241,7 +241,7 @@
           <div class="box box-success">
             <div class="box-header">
               <i class="fa fa-comments-o"></i>
-              <h3 class="box-title">Client name</h3>
+              <a href="ticket.html"><h3 class="box-title">Client name</h3></a>
               <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
                 <div class="btn-group" data-toggle="btn-toggle">
                   <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -279,7 +279,7 @@
           <div class="box box-success">
             <div class="box-header">
               <i class="fa fa-comments-o"></i>
-              <h3 class="box-title">Client name</h3>
+              <a href="ticket.html"><h3 class="box-title">Client name</h3></a>
               <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
                 <div class="btn-group" data-toggle="btn-toggle">
                   <button class="btn btn-success btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
