fix tags sequence

--- a/Assuty/agent-workspace.html
+++ b/Assuty/agent-workspace.html
@@ -188,6 +188,7 @@
           <li class="active">Workspace</li>
         </ol>
       </section>
+      <section class="content">
       <div class="alert alert-success alert-dismissable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
         <h4>  <i class="icon fa fa-check"></i> Alert!</h4> Ticket z was closed. You can now claim a new ticket.
@@ -313,6 +314,7 @@
           <!-- TWEET WRAPPER END -->
         </div>
       </div>
+      </section>
     </div>
     <!-- /.content-wrapper -->
     <footer class="main-footer">
