--- a/Assuty/profile.html
+++ b/Assuty/profile.html
@@ -188,7 +188,8 @@
           <li class="active">Profile</li>
         </ol>
       </section>
-      <div class="row">
+      <section class="content">
+        <div class="row">
             <div class="col-lg-6">
               <div class="box box-widget widget-user">
                   <!-- Add the bg color to the header using any of the bg-* classes -->
@@ -253,9 +254,9 @@
                <!--  <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a> -->
               </div>
             </div>
-          </div>
+        </div>
 
-          <div class="row">
+        <div class="row">
             <div class="col-lg-6">
               <div class="box box-solid bg-aqua-gradient">
                               <div class="box-header ui-sortable-handle" style="cursor: move;">
@@ -274,7 +275,8 @@
                               </div><!-- /.box-body -->
               </div>
             </div>
-          </div>
+        </div>
+      </section>
     </div>
     <!-- /.content-wrapper -->
     <footer class="main-footer">
