--- a/Assuty/layout.html
+++ b/Assuty/layout.html
@@ -204,6 +204,7 @@
               <li><a href="#" data-toggle="modal" data-target="#create-agent-modal"><i class="fa fa-plus"></i> <span>Create Agent</span></a></li>
               <li><a href="#" data-toggle="modal" data-target="#create-label-modal"><i class="fa fa-plus"></i> <span>Create Label</span></a></li>
               <li><a href="#" data-toggle="modal" data-target="#create-priority-modal"><i class="fa fa-plus"></i> <span>Create Priority</span></a></li>
+              <li><a href="#" data-toggle="modal" data-target="#create-ticket-modal"><i class="fa fa-plus"></i> <span>Create Ticket</span></a></li>
             </ul>
           </li>
           <li class="header">Spotlight</li>
@@ -225,7 +226,7 @@
           <li class="active">Feed</li>
         </ol>
       </section>
-      
+
       <!-- Main content -->
       <!-- right col (We are only adding the ID to make the widgets sortable)-->
     </div>
@@ -530,6 +531,65 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="create-ticket-modal" tabindex="-1" role="dialog" aria-labelledby="agent-modal" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <!-- Modal Header -->
+        <div class="modal-header">
+            <button type="button" class="close"
+               data-dismiss="modal">
+                   <span aria-hidden="true">&times;</span>
+                   <span class="sr-only">Close</span>
+            </button>
+            <h4 class="modal-title">
+                Create New Ticket
+            </h4>
+        </div>
+
+          <!-- Modal Body -->
+        <div class="modal-body">
+
+          <form class="form-horizontal">
+            <div class="box-body">
+               <!-- text input -->
+              <div class="form-group">
+                <label>Customer</label>
+                <input type="text" required="required" class="form-control" placeholder="phone number or twitter handle">
+              </div>
+
+              <!-- textarea -->
+              <div class="form-group">
+                <label>Problem</label>
+                <textarea class="form-control" required="required" rows="3" placeholder="Enter ..."></textarea>
+              </div>
+
+              <div class="form-group">
+                <label>Department</label>
+                <select class="form-control">
+                  <option>Payments</option>
+                  <option>Subscribtions</option>
+                  <option>DSL Plus</option>
+                  <option>Technical Support</option>
+                </select>
+              </div>
+            </div><!-- /.box-body -->
+            <div class="box-footer">
+              <button type="submit" class="btn btn-success pull-right">Submit</button>
+            </div><!-- /.box-footer -->
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
+
+
+
+
+
+
+
