--- a/milestone1/Statics/profile.html
+++ b/milestone1/Statics/profile.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="Assets/plugins/daterangepicker/daterangepicker-bs3.css">
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-  <!-- <link rel="stylesheet" href="Assets/twitter-feed/css/style.css"> -->
+  <link rel="stylesheet" href="Assets/twitter-feed/css/style.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
