--- a/milestone1/Statics/landing.html
+++ b/milestone1/Statics/landing.html
@@ -10,27 +10,27 @@
   <!-- Bootstrap 3.3.5 -->
   <link rel="stylesheet" href="Assets/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> -->
   <!-- Theme style -->
   <link rel="stylesheet" href="Assets/dist/css/AdminLTE.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="Assets/dist/css/skins/_all-skins.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="Assets/plugins/iCheck/flat/blue.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/iCheck/flat/blue.css"> -->
   <!-- Morris chart -->
-  <link rel="stylesheet" href="Assets/plugins/morris/morris.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/morris/morris.css"> -->
   <!-- jvectormap -->
-  <link rel="stylesheet" href="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.css"> -->
   <!-- Date Picker -->
-  <link rel="stylesheet" href="Assets/plugins/datepicker/datepicker3.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/datepicker/datepicker3.css"> -->
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="Assets/plugins/daterangepicker/daterangepicker-bs3.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/daterangepicker/daterangepicker-bs3.css"> -->
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-  <link rel="stylesheet" href="Assets/twitter-feed/css/style.css">
+  <!-- <link rel="stylesheet" href="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"> -->
+  <!-- <link rel="stylesheet" href="Assets/twitter-feed/css/style.css"> -->
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
